# archive

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
examples/: 01_list_contents.ring  02_extract_archive.ring  03_create_archive.ring  04_read_specific_file.ring  05_list_with_details.ring  06_archive_helper_class.ring  07_oop_reader.ring  08_read_file_content.ring  09_oop_writer.ring  10_archive_entry_class.ring  11_add_from_disk.ring  12_different_formats.ring  13_more_formats.ring  14_symlinks.ring  15_encrypted_zip.ring  16_encryption_methods.ring  17_memory_archives.ring  18_raw_data_reading.ring  19_low_level_api.ring  20_error_handling.ring  21_error_handling_detailed.ring  22_complete_example.ring
lib/macos/amd64/: libring_archive.dylib
lib/macos/arm64/: libring_archive.dylib
src/: archive.rh  archive.ring
src/c_src/: ring_archive.c
src/utils/: color.ring  install.ring  uninstall.ring
tests/: Archive_test.ring
